--- a/style.css
+++ b/style.css
@@ -7,16 +7,6 @@ body {
   width: 100%;
 }
 
-nav {
-  font-family: "Courier New", Courier, monospace;
-  font-size: larger;
-  color: white;
-  margin: 5%;
-  display: flex;
-  justify-content: end;
-  gap: 40px;
-}
-
 a {
   text-decoration: none;
   color: white;
@@ -59,9 +49,32 @@ a {
   padding: 5%;
   color: white;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   font-size: large;
 }
+
+/* Navbar */
+
+.imgNav {
+  border-radius: 50%;
+  border: 2px solid;
+  border-color: black;
+  width: 5%;
+}
+
+nav {
+  font-family: "Courier New", Courier, monospace;
+  font-size: larger;
+  color: white;
+  margin: 5%;
+  margin-top: 2%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 40px;
+}
+
 /* Vista "about" */
 
 .imgAbout {
