--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,8 +12,8 @@
 // sass --watch scss/styles.scss css/style.css
 
 // agregar otro extend
+// mejorar animacion de contacto
 // revisar nombres de clases
-// arreglar menu desplegable movil en about y experiencia
 // ctrl + s para tabulaciones en todas las pestañas
 
 // background-attachment : fixed -- img queda fija en el scroll
