--- a/scss/layouts/_general.scss
+++ b/scss/layouts/_general.scss
@@ -16,7 +16,7 @@
 @media only screen and (min-width: 500px) and (max-width: 960px) {
   .mainBody {
     background-image: url(https://res.cloudinary.com/dvxkjikvk/image/upload/v1725200848/desarrolloWeb/fondos/tablet_ssp7c1.jpg);
-    position: relative;
+    // background-attachment : fixed -- img queda fija en el scroll
   }
 }
 @media only screen and (min-width: 961px) {
@@ -36,11 +36,10 @@ footer {
   bottom: 0;
   width: 100%;
   max-height: 10vh;
-  margin-top: 1vh;
+  @extend %marginPaddingGeneral;
 }
 
 .capturas {
-  margin-bottom: 10vh;
   @extend %bloqueFlexColumn;
   width: 90%;
 }
@@ -52,12 +51,16 @@ footer {
 }
 .secciones {
   @extend %bloqueFlexColumn;
-  gap: 40px;
+  gap: 2vh;
   align-items: center;
 }
 
+.titulo {
+  @extend %marginPaddingGeneral;
+}
+
 .parrafoDescriptivo {
-  margin: 3vh 0vh;
+  @extend %marginPaddingGeneral;
   width: 90%;
   text-align: left;
 }
@@ -76,6 +79,10 @@ footer {
   @extend %bloqueFlexColumn;
   align-items: center;
   font-size: large;
+}
+
+.btn {
+  @include animacionBotones(1.2);
 }
 
 .btnSide {
