--- a/scss/layouts/_index.scss
+++ b/scss/layouts/_index.scss
@@ -4,30 +4,25 @@
   background-color: $secondaryBgColor;
   text-align: end;
   padding: 5%;
-  margin-top: 30%;
-  gap: 2vh;
+  @include propBannerGris(30%, 2vh, 20vh);
 }
 
 @media only screen and (min-width: 500px) and (max-width: 960px) {
   .bannerGris {
     justify-content: center;
-    gap: 3vh;
-    margin-top: 15%;
-    min-height: 60vh;
+    @include propBannerGris(15%, 3vh, 50vh);
   }
 }
+
 @media only screen and (min-width: 961px) {
   .bannerGris {
-    margin-top: 10%;
-    height: 50vh;
-    gap: 5vh;
+    @include propBannerGris(10%, 5vh, 50vh);
   }
 }
 
 .mediosContacto {
-  display: flex;
+  @extend %bloqueFlexRow;
   justify-content: end;
-  gap: 3vh;
 }
 
 .btnBanner {
