--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,5 +8,22 @@
 @import "./layouts/estudios";
 @import "./layouts/herramientas";
 @import "./layouts/contacto";
-
+@import "./layouts/experiencia";
 // sass --watch scss/styles.scss css/style.css
+
+
+// navbar con bg color y 
+// menos tiempo de animacion 
+// sacar margin top de los navbars
+// foto del navbar con link al home
+
+// margin en los certificados responsive
+
+// herramientas: ("mi stack, "hard skills" con font weight mayor). Agrupar distinto, a la izquierda? Iconos mas grandes en mobile. 
+
+// texto mas en el centro? en index y contacto
+
+// proyecto en cards, con el hover que se blurree y aparezca el texto descriptivo encima
+// ver altura de las fotos en responsive
+
+
