--- a/scss/utilities/_colors.scss
+++ b/scss/utilities/_colors.scss
@@ -6,3 +6,4 @@ $secondaryBgColor: rgba(128, 128, 128, 0.655);
 
 $primaryLinkHoverBg: rgba(71, 70, 70, 0.493);
 $secondaryLinkHoverBg: rgba(240, 233, 233, 0.493);
+$card: rgb(8, 8, 49);
