--- a/scss/layouts/_estudios.scss
+++ b/scss/layouts/_estudios.scss
@@ -1,6 +1,10 @@
+.carousel{
+     margin: 5vw;
+}
+
 @media only screen and (min-width: 500px) {
   .carousel {
     width: 75%;
-    margin: 5vw;
+    margin-bottom: 10vh;
   }
 }
