--- a/scss/layouts/_general.scss
+++ b/scss/layouts/_general.scss
@@ -55,6 +55,7 @@ footer {
   align-items: center;
 }
 
+
 .titulo {
   @extend %marginPaddingGeneral;
 }
@@ -92,6 +93,7 @@ footer {
   @extend %bloqueFlexColumn;
   gap: 1vh;
   @include animacionBotones(1.2);
+  z-index: 1;
 }
 
 @media only screen and (min-width: 500px) {
