--- a/scss/layouts/_herramientas.scss
+++ b/scss/layouts/_herramientas.scss
@@ -1,7 +1,19 @@
 .iconos {
-  width: 8%;
+  width: 20%;
   transition: transform 1s;
   &:hover {
     transform: scale(1.3) rotate(20deg);
+  }
+}
+
+@media only screen and (min-width: 500px) and (max-width: 960px) {
+  .iconos{
+    width: 12%;
+  }
+}
+
+@media only screen and (min-width: 961px) {
+  .iconos{
+    width: 8%;
   }
 }
