--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,18 +12,11 @@
 // sass --watch scss/styles.scss css/style.css
 
 
-// navbar con bg color y 
-// menos tiempo de animacion 
-// sacar margin top de los navbars
+
 // foto del navbar con link al home
 
-// margin en los certificados responsive
+// poner formulario de contacto?
 
-// herramientas: ("mi stack, "hard skills" con font weight mayor). Agrupar distinto, a la izquierda? Iconos mas grandes en mobile. 
+// ctrl s en todas las paginas
 
-// texto mas en el centro? en index y contacto
-
-// proyecto en cards, con el hover que se blurree y aparezca el texto descriptivo encima
-// ver altura de las fotos en responsive
-
-
+// tecnicas de SEO, revisar alt de imagenes
