--- a/scss/utilities/_colors.scss
+++ b/scss/utilities/_colors.scss
@@ -2,8 +2,8 @@ $primaryColor: rgb(217, 217, 217);
 $secondaryColor: rgb(28, 27, 27);
 
 $primaryBgColor: rgba(199, 141, 141, 0.655);
-$secondaryBgColor: rgba(128, 128, 128, 0.655);
+$secondaryBgColor: rgba(128, 128, 128, 0.755);
+$navBgColor: rgba(0, 0, 0, 0.518);
 
-$primaryLinkHoverBg: rgba(71, 70, 70, 0.493);
-$secondaryLinkHoverBg: rgba(240, 233, 233, 0.493);
+$linkHoverBg: rgba(240, 233, 233, 0.493);
 $card: rgb(8, 8, 49);
