--- a/scss/layouts/_experiencia.scss
+++ b/scss/layouts/_experiencia.scss
@@ -1,45 +1,41 @@
-.card{
-    border: 2px solid;
-    // border-left: 2px solid!important;
-    border-color: $card;
-    color: $card;
-}
-.card-img-top{
-    // height: 450px;
-    height: 70vh;    
+.card {
+  border: 2px solid;
+  border-color: $card;
+  color: $card;
 }
 
-.card-body{
-    padding-top: 0;
+.card-img-top {
+  aspect-ratio: 3/4;
 }
 
-.collapse.show{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.card-text{
-    max-width: 50vw;
-   
+.card-body {
+  padding-top: 0;
 }
 
-.button-container{
-    display: flex;
-    gap: 1vw;
+.collapseCardInfo.show {
+  @extend %bloqueFlexColumn;
 }
-.card-container{
-    display: grid;
-    gap:5vw;
-    margin-bottom: 10vh;
+
+.card-text {
+  max-width: 50vw;
+}
+
+.button-container {
+  @extend %bloqueFlexRow;
+  gap: 1vw;
+}
+.card-container {
+  display: grid;
+  gap: 5vw;
+  margin-bottom: 10vh;
 }
 
 @media only screen and (min-width: 961px) {
-.card-container{
+  .card-container {
     display: grid;
     grid-template-rows: auto;
     grid-template-columns: repeat(3, 30vw);
     gap: 1vw;
     margin-bottom: 10vh;
-}
-
+  }
 }
