--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -13,10 +13,7 @@
 
 
 
-// foto del navbar con link al home
-
-// poner formulario de contacto?
 
 // ctrl s en todas las paginas
-
-// tecnicas de SEO, revisar alt de imagenes
+// keywords y descripcion en todas las paginas?
+// mapa del sitio?
