--- a/scss/layouts/_index.scss
+++ b/scss/layouts/_index.scss
@@ -3,19 +3,19 @@
   color: $primaryColor;
   background-color: $secondaryBgColor;
   padding: 5%;
-  @include propBannerGris(30%, 2vh, 20vh);
+  @include propBannerGris(30vh, 2vh, 20vh);
 }
 
 @media only screen and (min-width: 500px) and (max-width: 960px) {
   .bannerGris {
     justify-content: center;
-    @include propBannerGris(15%, 3vh, 50vh);
+    @include propBannerGris(15vh, 3vh, 50vh);
   }
 }
 
 @media only screen and (min-width: 961px) {
   .bannerGris {
-    @include propBannerGris(10%, 5vh, 50vh);
+    @include propBannerGris(10vh, 5vh, 50vh);
   }
 }
 
