--- a/css/style.css
+++ b/css/style.css
@@ -282,10 +282,16 @@ footer {
   border: 2px solid;
   border-color: rgb(8, 8, 49);
   color: rgb(8, 8, 49);
+  margin: 0px 2vw;
 }
 
+@media only screen and (min-width: 961px) {
+  .card {
+    margin: 0px 0vw;
+  }
+}
 .card-img-top {
-  aspect-ratio: 3/4;
+  aspect-ratio: 10/16;
 }
 
 .card-body {
@@ -293,7 +299,7 @@ footer {
 }
 
 .card-text {
-  max-width: 50vw;
+  max-width: 80vw;
 }
 
 .button-container {
