--- a/scss/layouts/_experiencia.scss
+++ b/scss/layouts/_experiencia.scss
@@ -2,10 +2,17 @@
   border: 2px solid;
   border-color: $card;
   color: $card;
+  margin: 0px 2vw; 
+}
+
+@media only screen and (min-width: 961px) {
+  .card{
+    margin: 0px 0vw;
+  }
 }
 
 .card-img-top {
-  aspect-ratio: 3/4;
+  aspect-ratio: 10/16;
 }
 
 .card-body {
@@ -17,7 +24,7 @@
 }
 
 .card-text {
-  max-width: 50vw;
+  max-width: 80vw;
 }
 
 .button-container {
